--- a/templates/base.html
+++ b/templates/base.html
@@ -227,7 +227,7 @@
   <!-- Footer -->
   <footer class="footer">
 
-    <section class="footer-socials">
+    <div class="footer-socials">
 
       <a class="text-white" href="https://wwww.facebook.com" rel="nofollow" target="_blank"
         aria-label="visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
@@ -241,11 +241,11 @@
       <a class="text-white" href="https://www.tiktok.com" rel="nofollow" target="_blank"
         aria-label="visit our Tiktok page"><i class="fa-brands fa-tiktok"></i></a>
 
-    </section>
+    </div>
 
 
 
-    <section class="footer-newsletter mx-auto text-center">
+    <div class="footer-newsletter mx-auto text-center">
       <div class="mx-auto">
 
         <div id="mc_embed_shell">
@@ -294,9 +294,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
-    <section class="footer-content">
+    <div class="footer-content">
 
       <div>
         <a class="text-white" href="{% url 'privacy' %}" aria-label="visit our privacy policy page">
@@ -317,20 +317,20 @@
         </a>
       </div>
 
-    </section>
+    </div>
 
 
   </footer>
 
   <!-- Block for additional JS when required -->
   {% block postloadjs %}
-  <script type="text/javascript">
+  <script>
     $('.toast').toast('show');
   </script>
 
   <!-- Mailchimp signup form scripts -->
-  <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-  <script type="text/javascript">
+  <script src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+  <script>
     (function ($) {
       window.fnames = new Array();
       window.ftypes = new Array();
