--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -313,7 +313,7 @@
 {% block postloadjs %}
 {{ block.super }}
 
-<script type="text/javascript">
+<script>
     // This provides a defence against accidental product deletion by hiding the
     // edit and delete buttons when the delete button is clicked, and displaying
     // a confirmation dialogue box instead
