Fix html validation errors in cart page

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -188,7 +188,7 @@
 
 
 <!-- Back to Top button JS logic -->
-<script type="text/javascript">
+<script>
     $('.btt-link').click(function (e) {
         window.scrollTo(0, 0);
     });
@@ -198,7 +198,7 @@
 
 
 <!-- Quantity form button JS logic (update/remove) -->
-<script type="text/javascript">
+<script>
     // Update quantity on click
     $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
