--- a/chocolates/templates/chocolates/add_chocolate.html
+++ b/chocolates/templates/chocolates/add_chocolate.html
@@ -55,7 +55,7 @@
     </script> -->
 
     <!-- Script to handle the custom select image field -->
-    <script type="text/javascript">
+    <script>
         $('#new-image').change(function() {
             var file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
