--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
             <input class="form-control border border-purple rounded-lg" type="text" name="q"
               placeholder="Search for chocolates..">
             <div class="input-group-append">
-              <button class="form-control btn btn-purple border border-purple rounded-2" type="submit">
+              <button name="search-form-button" class="form-control btn btn-purple border border-purple rounded-2" type="submit">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
@@ -181,7 +181,7 @@
     <!-- Free Shipping banner, from base.html -->
     <div id="delivery-banner" class="text-center">
       <div class="text-white mt-1">
-        <h4 class="my-1">Free delivery on orders over €{{ free_delivery_threshold }}!</h4>
+        <h1 class="my-1">Free delivery on orders over €{{ free_delivery_threshold }}!</h1>
       </div>
     </div>
 
