--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -48,7 +48,7 @@
                     <input class="form-control border border-purple rounded-lg" type="text" name="q"
                         placeholder="Search for chocolates..">
                     <div class="input-group-append">
-                        <button class="form-control form-control btn btn-purple border border-purple rounded-lg"
+                        <button name="search-form-button" class="form-control form-control btn btn-purple border border-purple rounded-lg"
                             type="submit">
                             <span class="icon">
                                 <i class="fas fa-search "></i>
