Update chocolate model fields to improve field validation

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -54,7 +54,7 @@
                 This was already the vision of founder Carol Ruiterman when, in 2017, she opened a dessert shop in
                 Amsterdam with her daughter Sabine. With the belief that they could improve the taste of chocolate with
                 their own unique perspective and creativity. While also offering innovative recipes that cater to the
-                evolving dietary requirements of chocolate lovers!
+                evolving <strong class="bright-purple-text">dietary</strong> requirements of chocolate lovers!
                 <br>
                 <br>
                 Chocelegance's innovative diet friendly creations include recipes for <strong
@@ -69,9 +69,9 @@
                 <br>
                 <br>
                 To preserve this beautiful, rich chocolate flavor, Chocelegance's recipes replace the butter and sugar
-                typically used with pure cream and diet friendly organic alternatives. This enhances the flavor and
-                ensures that the filling is the star of each bonbon. All in support of the most important belief: it
-                must taste absolutely delicious!
+                typically used with pure cream and diet friendly <strong class="bright-purple-text">organic</strong> alternatives. This enhances the flavor and
+                ensures that the filling is the star of each chocolate. All in support of the most important belief: it
+                must taste absolutely <strong class="bright-purple-text">delicious</strong>!
             </p>
         </div>
     </div>
