--- a/static/css/base.css
+++ b/static/css/base.css
@@ -183,7 +183,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     color: white;
-    height: 13.4rem;
+    height: 14.1rem;
     padding-top: .4rem;
     margin-top: 5rem !important;
     padding-left: .7rem;
@@ -267,6 +267,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 
 #mc_embed_signup div #mce-responses {
     width: 104% !important;
+    max-width: 600px;
     font-size: .7rem;
     margin: 0 !important;
     line-height: 1 !important;
