--- a/static/css/base.css
+++ b/static/css/base.css
@@ -499,6 +499,10 @@ input[id="id-save-info"] {
     font-weight: 300;
 }
 
+.form-control:default {
+    opacity: .5 !important;
+}
+
 
 /* ------------------------------------------------------------------------------------------------------------------------------ FREE DELIVERY BANNER STYLING */
 
