--- a/chocolates/templates/chocolates/edit_chocolate.html
+++ b/chocolates/templates/chocolates/edit_chocolate.html
@@ -49,10 +49,10 @@
 {% block postloadjs %}
     {{ block.super }}
 
-    <!-- Hides the 'choc_name' field from the user, this field is an automatically prepopulated 'slug' field based on what is manually entered in the 'choc_friendly_name' field -->
-    <!-- <script>
-        document.getElementById('div_id_choc_name').style.display = 'none';
-    </script> -->
+    <!-- Changes the text for the form slug field label to give more user friendly instruction -->
+    <script>
+        document.getElementById('div_id_choc_name').firstElementChild.innerText = "Choc slug field (lower case characters, words separated by hyphens)"
+    </script>
 
     <!-- Script to handle the custom select image field -->
     <script>
