--- a/chocolates/templates/chocolates/add_chocolate.html
+++ b/chocolates/templates/chocolates/add_chocolate.html
@@ -58,9 +58,12 @@
     </script>
 
     <!-- Script to handle the custom select image field -->
+
+    <!-- The original code resulted in a duplicate ID error, however, a Code Institute student, Katie Dunne, highlighted a solution in her repository for the same issue, I copied the same solution from her repo found here https://github.com/KSDunne/summit_style. The solution can be found in the 'resolved bugs' section. It invoves changing the ID to a 'data-category'.  -->
+
     <script>
-        $('#new-image').change(function() {
-            var file = $('#new-image')[0].files[0];
+        $("input[data-category='new-image']").change(function() {
+            var file = $[this][0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
         });
     </script>
